// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@is as parameter decorator 1`] = `
Map {
  2 => Object {
    "converter": [Function],
    "validatorFactory": undefined,
    "validators": Array [
      [Function],
    ],
  },
  1 => Object {
    "converter": [Function],
    "validatorFactory": undefined,
    "validators": Array [],
  },
  0 => Object {
    "converter": [Function],
    "validatorFactory": undefined,
    "validators": Array [],
  },
}
`;

exports[`@is as property decorator 1`] = `
Object {
  "converter": [Function],
  "validatorFactory": undefined,
  "validators": Array [
    [Function],
    [Function],
  ],
}
`;

exports[`@is as property decorator 2`] = `
Object {
  "converter": [Function],
  "validatorFactory": undefined,
  "validators": Array [
    [Function],
    [Function],
  ],
}
`;

exports[`The test schema detects a invalid input as invalid 1`] = `
Object {
  "value": Object {
    "a": Object {
      "errors": Array [
        "Not a valid integer.",
      ],
    },
    "d": Object {
      "errors": Array [
        "Unexpected key.",
      ],
    },
  },
}
`;

exports[`The test schema detects a invalid input as invalid 2`] = `
Object {
  "value": Object {
    "a": Object {
      "errors": Array [
        "Not a valid integer.",
      ],
    },
  },
}
`;

exports[`The test schema detects a invalid input as invalid 3`] = `
Object {
  "value": Object {
    "a": Object {
      "errors": Array [
        "Not one of (1, 2, 3, 4).",
      ],
    },
    "b": Object {
      "value": Object {
        "c": Object {
          "errors": Array [
            "Not a valid integer.",
          ],
        },
      },
    },
    "d": Object {
      "errors": Array [
        "Missing required field.",
      ],
    },
  },
}
`;
